manifests/dashboard-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-np
  namespace: kube-system
spec:
  ports:
  - nodePort: 30443
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
  type: NodePort
