manifests/grafana-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-np
  namespace: monitoring
spec:
  ports:
  - nodePort: 30000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
  type: NodePort
