manifests/prometheus-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-np
  namespace: monitoring
spec:
  ports:
  - nodePort: 30090
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
  type: NodePort
